* call.c (build_over_call): Set TREE_NO_UNUSED_WARNING too. 	* cvt.c (convert_to_void): Preserve TREE_NO_UNUSED_WARNING.
	* g++.dg/warn/Wunused-1.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50769 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-14  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/warn/Wunused-1.C: New test.
+
 2002-02-13  Richard Sandiford  <rsandifo@redhat.com>
 
 	* g++.dg/abi/mangle6.C: New test.
