--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-14  Jakub Jelinek  <jakub@redhat.com>
+
+	* call.c (build_over_call): Set TREE_NO_UNUSED_WARNING too.
+	* cvt.c (convert_to_void): Preserve TREE_NO_UNUSED_WARNING.
+
 2002-03-12  Richard Sandiford  <rsandifo@redhat.com>
 
 	* mangle.c (write_builtin_type): Handle 128-bit integers even if
