* gcc.c-torture/execute/20020314-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50772 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-14  Richard Earnshaw  <rearnsha@arm.com>
+
+	* gcc.c-torture/execute/20020314-1.c: New test.
+
 2002-03-14  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/warn/Wunused-1.C: New test.
