PR target/5828 * arm.c (arm_output_epilogue): Fix floating-point register save adjustment when using a frame pointer.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50773 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-14  Richard Earnshaw  <rearnsha@arm.com>
+	    Jeroen Dobbelaere  <jeroen.dobbelaere@acunia.com>
+
+	PR target/5828
+	* arm.c (arm_output_epilogue): Fix floating-point register save
+	adjustment when using a frame pointer.
+
 2002-03-13  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* config/mmix/mmix.c: Improve comments.
