--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-14  Richard Earnshaw  <rearnsha@arm.com>
+
+	* arm.md: Fix warnings about constraints in peepholes and splits.
+
 2002-03-14  Zack Weinberg  <zack@codesourcery.com>
 
 	* cpphash.h (struct lexer_state): Remove line_extension member.
