--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -3851,6 +3851,11 @@ If an function contains more than this many instructions, it
 will not be inlined.  This option is precisely equivalent to
 @option{-finline-limit}.
 
+@item max-unrolled-insns
+The maximum number of instructions that a loop should have if that loop
+is unrolled, and if the loop is unrolled, it determines how many times
+the loop code is unrolled.
+
 @end table
 @end table
 
