PR optimization/5891 	* unroll.c (copy_loop_body) [CALL_INSN]: Copy SIBLING_CALL_P flag.
	* g77.dg/pr5891.f: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50790 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-15  Jakub Jelinek  <jakub@redhat.com>
+
+	PR optimization/5891
+	* unroll.c (copy_loop_body) [CALL_INSN]: Copy SIBLING_CALL_P flag.
+
 2002-03-14  David Mosberger <davidm@hpl.hp.com>, Hans Boehm <Hans_Boehm@hp.com>
 
 	* config/ia64/unwind-ia64.c: Handle copy_state and label_state
