* toplev.c (wrapup_global_declarations): Clarify variable handling.         -fkeep-static-consts doesn't apply to comdats.
cp/
        * decl.c (make_rtl_for_nonlocal_decl): Also defer COMDAT
        variables.
        * decl2.c (maybe_make_one_only): Also mark the decl as needed.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50802 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-15  Jason Merrill  <jason@redhat.com>
+
+	* toplev.c (wrapup_global_declarations): Clarify variable handling.
+	-fkeep-static-consts doesn't apply to comdats.
+
 2002-03-14  Richard Henderson  <rth@redhat.com>
 
 	* c-decl.c: Include c-pragma.h.
