--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-15  Jason Merrill  <jason@redhat.com>
+
+	* decl.c (make_rtl_for_nonlocal_decl): Also defer COMDAT
+	variables.
+	* decl2.c (maybe_make_one_only): Also mark the decl as needed.
+
 2002-03-14  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/5908
