PR target/5712 * arm.md (movaddr, movaddr_insn): Delete.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50809 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-15  Richard Earnshaw  <rearnsha@arm.com>
+
+	PR target/5712
+	* arm.md (movaddr, movaddr_insn): Delete.
+
 2002-03-15  Jason Merrill  <jason@redhat.com>
 
 	* toplev.c (wrapup_global_declarations): Clarify variable handling.
