* jcf-parse.c (yyparse): Don't emit class registration 	constructor when compiling resource files.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50811 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-15  Anthony Green  <green@redhat.com>
+
+	* jcf-parse.c (yyparse): Don't emit class registration
+	constructor when compiling resource files.
+
 2002-03-12  Tom Tromey  <tromey@redhat.com>
 
 	* jcf-parse.c (get_constant) [CONSTANT_String]: String values are
