* configure.in (tool_include_dir): Define. 	* configure: Rebuilt. 	* gcj/Makefile.am: Install libgcj-config.h relative to 	tool_include_dir. 	* gcj/Makefile: Rebuilt. 	* gcj/libgcj-config.h: Add warning comment.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50813 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,12 @@
+2002-03-15  Anthony Green  <green@redhat.com>
+
+	* configure.in (tool_include_dir): Define.
+	* configure: Rebuilt.
+	* gcj/Makefile.am: Install libgcj-config.h relative to
+	tool_include_dir.
+	* gcj/Makefile: Rebuilt.
+	* gcj/libgcj-config.h: Add warning comment.
+
 2002-03-12  Andreas Tobler  <a.tobler@schweiz.ch>
 
 	* configure.host (powerpc*-darwin*): Enable interpreter.
