--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar 15 09:55:49 2002  Anthony Green  <green@redhat.com>
+
+	* configure.in: Remove useless is_mingw32.
+	* configure: Rebuilt.
+
 2002-03-12  Loren Rittle  <ljrittle@acm.org>
 
 	reported by Peter Schmid <schmid@snake.iap.physik.tu-darmstadt.de>
