* gcc.dg/weak-1.c: Fix scan tests.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50821 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-15  Richard Earnshaw  <rearnsha@arm.com>
+
+	* gcc.dg/weak-1.c: Fix scan tests.
+
 2002-03-15  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* gcc.dg/20020312-2.c [__MMIX__]: No pic register.
