* varasm.c (assemble_variable): Use zeros for a decl with DECL_INITIAL         of error_mark_node.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50825 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-15  Jason Merrill  <jason@redhat.com>
+
+	* varasm.c (assemble_variable): Use zeros for a decl with DECL_INITIAL
+	of error_mark_node.
+
 2002-03-15  Jakub Jelinek  <jakub@redhat.com>
 
 	PR bootstrap/4128
