PR bootstrap/4128 	* config/sparc/sparc.c (gen_v9_scc): Move early clobber test 	before movrXX only, use reg_overlap_mentioned_p. 	Only special case NE if just one insn can be generated.
	* gcc.c-torture/compile/20020315-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50826 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-15  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20020315-1.c: New test.
+
 2002-03-15  Richard Earnshaw  <rearnsha@arm.com>
 
 	* gcc.dg/weak-1.c: Fix scan tests.
