--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,13 @@
 2002-03-15  Jason Merrill  <jason@redhat.com>
 
+	* varasm.c (globalize_decl): New fn.
+	(assemble_start_function): Use it.
+	(asm_emit_uninitialized): Use it.
+	(assemble_alias): Use it.
+	(assemble_variable): Use it.
+
+2002-03-15  Jason Merrill  <jason@redhat.com>
+
 	* varasm.c (assemble_variable): Use zeros for a decl with DECL_INITIAL
 	of error_mark_node.
 
@@ -133,8 +141,8 @@
 
 2002-03-13  Hartmut Penner  <hpenner@de.ibm.com>
 
-        * config/s390/s390.h (PROFILE_BEFORE_PROLOGUE): Emit profile code
-        before prologue, to avoid scheduling problems.
+	* config/s390/s390.h (PROFILE_BEFORE_PROLOGUE): Emit profile code
+	before prologue, to avoid scheduling problems.
 
 2002-03-13  Jakub Jelinek  <jakub@redhat.com>
 
@@ -178,8 +186,8 @@
 
 2002-03-13  Aldy Hernandez  <aldyh@redhat.com>
 
-        * expmed.c (store_bit_field): Reset alias set for memory.
-        (extract_bit_field): Same.
+	* expmed.c (store_bit_field): Reset alias set for memory.
+	(extract_bit_field): Same.
 
 2002-03-12  Chris Meyer  <cmeyer@gatan.com>
 
