--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-15  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.dg/opt/dtor1.C: New test.
+
 2002-03-15  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20020315-1.c: New test.
