--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-15  Tom Tromey  <tromey@redhat.com>
+	    Rainer Orth <ro@TechFak.Uni-Bielefeld.DE>
+	
+	Fix for PR libgcj/5944.
+	* gnu/gcj/io/shs.h: Define uint8_t and uint32_t.
+
 2002-03-15  Anthony Green  <green@redhat.com>
 
 	* configure.in (tool_include_dir): Define.
